# friendtools

./: .env.example  .gitignore  README.md  bootstrap.sh  docker-compose.example.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_trips.sql  0003_trip_votes.sql  0004_calendar_shopping.sql  0006_splitwise_payments.sql  0007_trip_planner.sql  0008_multiple_trips.sql  0009_tasks.sql  0013_groups_invite_optional.sql  0014_shopping_personal.sql  0015_tasks_personal.sql  0016_password_reset.sql  0017_google_calendar.sql
backend/src/: cli.rs  config.rs  db.rs  error.rs  mail.rs  main.rs  state.rs
backend/src/admin/: handlers.rs  mod.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/calendar/: handlers.rs  mod.rs
backend/src/google_calendar/: crypto.rs  handlers.rs  mod.rs  oauth.rs  sync.rs
backend/src/groups/: handlers.rs  mod.rs
backend/src/shopping/: handlers.rs  mod.rs
backend/src/splitwise/: handlers.rs  mod.rs
backend/src/tasks/: handlers.rs  mod.rs
backend/src/trips/: handlers.rs  info.rs  itinerary.rs  mod.rs  packing.rs  trip.rs  unfurl.rs
frontend/: Dockerfile  index.html  nginx.conf  nginx.tls.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/legal/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: admin.ts  client.ts  googleCalendar.ts  groups.ts  types.ts
frontend/src/components/: DayPicker.tsx  HeaderMenu.tsx  HelpBanner.tsx  InstallAppButton.tsx  InstanceBadge.tsx  LanguageSwitcher.tsx  Layout.tsx  LegalDocument.tsx  LoadingState.tsx  MonthCalendar.tsx  PageHeader.tsx  ProtectedRoute.tsx  Reveal.tsx  ThemeSwitcher.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/i18n/: de.ts  en.ts  index.ts
frontend/src/lib/: authConfig.ts  date.ts  format.ts
frontend/src/pages/: AdminUsers.tsx  Dashboard.tsx  ForgotPassword.tsx  GoogleCalendarIntegration.tsx  GroupHome.tsx  Invite.tsx  Landing.tsx  Login.tsx  PendingApproval.tsx  PersonalCalendar.tsx  PersonalShopping.tsx  PersonalShoppingList.tsx  PersonalTasks.tsx  PrivacyPolicy.tsx  Register.tsx  ResetPassword.tsx  TermsOfService.tsx
frontend/src/tools/: index.ts  useFavoriteTools.ts
frontend/src/tools/calendar/: CalendarView.tsx  OverviewPage.tsx  api.ts
frontend/src/tools/shopping/: ListsPage.tsx  OverviewPage.tsx  ShoppingListView.tsx  api.ts
frontend/src/ui/: ConfirmDialog.tsx  Toast.tsx  UIProvider.tsx
(+18 files in other folders)
