[package]
name = "friendflow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "charset",
    "json",
] }
scraper = "0.20"
url = "2"

lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "rustls-tls",
] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
